<resources>
    <string name="app_name">Seul</string>
    <string name="search">Search</string>
    <string name="near_me">Near me</string>
    <string name="rating">Rating</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="category">Category</string>
    <string name="create">Create</string>
    <string name="restaurant_created">Restaurant created.</string>
    <string name="restaurant_deleted">Restaurant deleted.</string>
    <string name="error_message">There was an error.</string>
    <string name="delete">Delete</string>
</resources>
